src/test/deca/context/invalid/objet/missing_type_inst.deca
// Description:
//    Initialisation sans type.
//
// Resultats:
//      Error
//
// Historique:
//    cree le 01/01/2023

{
    x = 4;
}
